--- a/themes/simpledoc/stylesheets/style.css
+++ b/themes/simpledoc/stylesheets/style.css
@@ -144,13 +144,8 @@ h1 {
 
 }
 
-h2 {
-	
-	font-size: 1.5em;
-	
-}
 
-h3 {
+h2,h3 {
 	font-size: 1.5em;
 	margin-top: 1.5em;
 	margin-bottom: .5em;
@@ -180,7 +175,7 @@ p.booktext {
 
 ol {
 	margin-bottom: .5em;
-	padding-left: 30px;
+	padding-left: 60px;
 
 }
 
@@ -189,6 +184,7 @@ ul {
 	/*padding-left: 30px;*/
 	margin-bottom: .5em;
 	list-style-type:none;
+	margin: auto;
 }
 
 b, strong {
@@ -254,7 +250,7 @@ blockquote {
 	text-align: center;
 	font-style: italic;
 
-	
+
 
 }
 
@@ -297,12 +293,44 @@ blockquote {
 	font-size: 80%;
 	max-width: 150px;
 	line-height: 1.5em;
+	padding-top: 1.2em;
 	
 }
+
+.book{
+	padding-top: .5em;
+	padding-right: 1.7em;
+	width: 7em;
+	
+}
+
 
 .big{
 	max-width: 200px;
 }
+
+.center {
+
+	margin: 0 auto;
+	padding-bottom: 1em;
+}
+
+/* Table of Contents Style
+/*---------------------------------------------*/
+
+.contents {
+	
+	
+}
+
+
+.date {
+  
+  text-align: right;
+  padding-right: 1em;
+  width: 5em;
+}
+
 
 
 /* Structure Styles
@@ -368,6 +396,24 @@ blockquote {
 #footer a:hover { color: grey; }
 
 
+/* Misc Styles
+/*---------------------------------------------*/
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
 
 
 /* Misc Styles
@@ -427,5 +473,19 @@ blockquote {
 		line-height: 1.5em;
 		z-index:20;
 
+		}
+
+		.book{
+			padding-top: .5em;
+			padding-right: 1.7em;
+			width: 7em;
+			
+	
+}
+
+	ul {
+/*	text-align: center;*/
+
+		}
 }
 
