--- a/themes/simpledoc/stylesheets/style.css
+++ b/themes/simpledoc/stylesheets/style.css
@@ -148,11 +148,20 @@ h1 {
 h2,h3 {
 	font-size: 1.5em;
 	margin-top: 1.5em;
-	margin-bottom: .5em;
+	margin-bottom: .2Sem;
 	margin-left: 1em;
 	margin-right: 1em;
 
 	text-align: center;
+	font-style: italic;
+}
+
+h4 {
+	font-size: 1.4em;
+	margin-top: .2em;
+	margin-bottom: .5em;
+	
+	text-align: left;
 	font-style: italic;
 
 	
@@ -315,6 +324,8 @@ blockquote {
 	padding-bottom: 1em;
 }
 
+
+
 /* Table of Contents Style
 /*---------------------------------------------*/
 
@@ -331,6 +342,10 @@ blockquote {
   width: 5em;
 }
 
+.feature {
+
+	margin-bottom: 1.5em;
+}
 
 
 /* Structure Styles
