--- a/themes/simpledoc/stylesheets/style.css
+++ b/themes/simpledoc/stylesheets/style.css
@@ -32,7 +32,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 
 
 body {
-	line-height: 1;
+
 	color: black;
 	background: white;
 }
@@ -108,11 +108,13 @@ select:focus {
 body {
 
 	font-family: 'Libre Baskerville', serif;
-	line-height: 2em;
-	font-size: 120%;
+
+	font-size: 110%;
+	line-height: 2
 	color: black;
 	background: #fff;
 	-webkit-font-smoothing: antialiased;
+
 }
 
 a, a:visited {
@@ -134,9 +136,11 @@ h1, h2, h3, h4, h5, h6 {
 	color: #000;
 	line-height: 1.2em;
 	margin-bottom: 0.6em;
+
+
 	font-family: 'Libre Baskerville', serif;
 	text-align: center;
-	
+
 }
 
 h1 {
@@ -170,7 +174,7 @@ h4 {
 p {
 	margin-bottom: 1em;
 	margin-top: 1em;
-	line-height: 1.4em;
+	line-height: 1.7em;
 	font-size: 1.3em;
 	text-align: justify;
 
