--- a/themes/simpledoc/stylesheets/style.css
+++ b/themes/simpledoc/stylesheets/style.css
@@ -28,6 +28,12 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 
 }
 
+#headersearch {
+	margin:auto;
+	width:66%;
+	margin-top: -10px;
+}
+
 .tinydate {
 	margin-top: -1.5em;
 	margin-bottom: .25em;
@@ -567,6 +573,12 @@ blockquote {
 }
 
 @media all and (max-width: 640px) {
+
+	#headersearch {
+	margin:auto;
+	width:80%;
+	margin-top: -10px;
+}
 
 
 	#hellobar {
