--- a/themes/simpledoc/responsive.css
+++ b/themes/simpledoc/responsive.css
@@ -41,6 +41,144 @@ body {
 
    }
 
+p {
+  margin-bottom:1em;
+}
+
+
+.solopage {
+  max-width:800px;
+  margin:auto;
+}
+
+.solopage table,ol {
+  margin-bottom: 1em;
+  padding-left: 5em;
+}
+
+
+
+.solopage h1 {
+  font-size: 2em;
+
+}
+
+
+.solopage h2,h3 {
+  font-size: 1.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+  font-weight: normal;
+  text-align: center;
+  font-style: italic;
+}
+
+.solopage h4 {
+  font-size: 1.4em;
+  margin-top: .2em;
+  margin-bottom: .5em;
+  
+  text-align: left;
+  font-style: italic;
+
+  
+}
+
+img {
+  width:100%;
+}
+
+.big {
+  max-width: 200px;
+  text-align :center;
+  padding-bottom: 1em;
+}
+
+.big img {
+  max-width: 250px;
+
+}
+
+.center {
+  margin:auto;
+
+}
+
+.horizimage {
+  max-width: 710px;
+  display:block;
+}
+
+.horizimage img {
+  width: 100%;
+
+}
+
+.smallimage {
+  width: 150px;
+  margin: 0 auto;
+  padding-bottom: 1em;
+
+}
+
+
+.vertheroimage {
+
+  text-align: center;
+  display:block;
+
+  margin: auto;
+  padding-bottom: 1em;
+
+}
+
+
+.vertheroimage img {
+  display:block;
+  margin: auto;
+
+}
+
+
+.left { float: left;
+    position:relative;
+    margin-right: 2%;
+    padding-right: 2%;
+    padding-bottom: 1%;
+    
+    text-align:left;
+  
+  
+}
+
+.right { float: right;
+     position:relative;
+     margin-left: 2%;
+    padding-left: 2%;
+    padding-bottom: 1%;
+    
+     text-align:right;
+
+    
+
+}
+
+.aside{
+  clear:both;
+  font-style: italic;
+  font-size: 80%;
+  max-width: 150px;
+  line-height: 1.5em;
+  padding-top: 1.2em;
+  
+}
+
+.bookcover img {
+  max-height :200px;
+}
+
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; }
